// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders basic Sound Pad layout 1`] = `
<body>
  <div>
    <div>
      Sound Pad Online
      <padeditormock />
    </div>
  </div>
</body>
`;

exports[`renders items from GunJS 1`] = `
<body>
  <div>
    <div>
      Sound Pad Online
      <padeditormock />
      <paditemmock
        audio="[object Object]"
        title="text1"
      />
      <paditemmock
        audio="[object Object]"
        title="text2"
      />
    </div>
  </div>
</body>
`;
